Working on skills, about section

--- a/index.html
+++ b/index.html
@@ -75,19 +75,17 @@
     <!--About section-->
     <section id="about">
         <div class="container">
+                <h1 class="text-center topic">O mnie</h1>
             <div class="row">
-                <div class="col-md-8">
-                    <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
-                    <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
-                    <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
-
-                    <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
-                    <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
+                <div class="col-md-8 my-auto">
+         
+                    <p class="text-justify">Student ostatniego roku informatyki. Programuje głównie na platformie .NET w języku C#. Programowanie od dawna jest moim hobbym w którym ciągle staram się rozwijać.
+                         Lubię uczyć się nowych rzeczy, zawsze jestem otwarty na nowe języki i technologie.</p>   
                 </div>
                 <div class="col-md-4">
                     <div class="d-flex justify-content-center">
                         <img class="img-fluid"
-                            src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/86/8666580b4e960d717d83398c7efe975911611bd3_full.jpg">
+                            src="images/2.jpeg">
                     </div>
 
                 </div>
@@ -98,12 +96,34 @@
 
     <!--Skills section-->
     <section id="skills">
-        <p class="text-center">onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit.
-            Se</p>
+        <h1 class="text-center topic">Umięjętności</h1>
         <div class="container ">
-            <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
-            <div class="row ">
-                <!--class="col-6 col-sm-3 col-md-2"-->
+            <p class="text-center mb-5">Języki i narzędzia z którymi najczęścej mam do czynienia.</p>
+
+            <div class="row mb-4">
+                <div class="col">
+                    <div class="d-flex justify-content-center mb-3">
+                        <img class="img-logo" src="images/csharp.png">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="d-flex justify-content-center mb-3">
+                        <img class="img-logo" src="images/net.png">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="d-flex justify-content-center mb-3">
+                        <img class="img-logo" src="images/net core.png">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="d-flex justify-content-center mb-3">
+                        <img class="img-logo" src="images/mssql2.png">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mb-4">
                 <div class="col">
                     <div class="d-flex justify-content-center mb-3">
                         <img class="img-logo" src="images/html.png">
@@ -119,49 +139,21 @@
                         <img class="img-logo" src="images/js.png">
                     </div>
                 </div>
+
+            </div>
+
+            <div class="row">   
                 <div class="col">
                     <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/jquery.png">
+                        <img class="img-logo mx-auto" src="images/git3.png">
                     </div>
                 </div>
-
                 <div class="col">
                     <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/bootstrap.png">
+                        <img class="img-logo mx-auto" src="images/plastic.png">
                     </div>
                 </div>
             </div>
-
-            <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
-            <div class="row">
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/csharp.png">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/net.png">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/asp-net-mvc.png">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/asp-net-core.png">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/wpf.png">
-                    </div>
-                </div>
-            </div>
-
-            <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
             <div class="row">
 
                 <div class="col ">
@@ -169,12 +161,7 @@
                         <img class="img-logo " src="images/unity3.png">
                     </div>
                 </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo mx-auto" src="images/git2.png">
-                    </div>
                 </div>
-            </div>
         </div>
     </section>
 
@@ -194,7 +181,7 @@
                         </div>
                     </div>
                     <div class="card-body text-center">
-                        <h5 class="card-title">Mood food</h5>
+                        <h5 class="card-title topic">Mood food</h5>
                         <p class="card-text">2018 <a href="https://github.com/owik100/Mood-Food" target="blank">Github
                                 <i class="fab fa-github"></i>
                             </a></p>
@@ -211,7 +198,7 @@
                         </div>
                     </div>
                     <div class="card-body text-center">
-                        <h5 class="card-title">Minesweeper</h5>
+                        <h5 class="card-title topic">Minesweeper</h5>
                         <p class="card-text">2018 <a href="https://github.com/owik100/Minesweeper"
                                 target="blank">Github <i class="fab fa-github"></i>
                             </a></p>
@@ -227,7 +214,7 @@
                         </div>
                     </div>
                     <div class="card-body text-center">
-                        <h5 class="card-title">Chat</h5>
+                        <h5 class="card-title topic">Chat</h5>
                         <p class="card-text">2018 <a href="https://github.com/owik100/Chat" target="blank">Github <i
                                     class="fab fa-github"></i>
                             </a></p>
@@ -243,7 +230,7 @@
                         </div>
                     </div>
                     <div class="card-body text-center">
-                        <h5 class="card-title">Pasjans golf</h5>
+                        <h5 class="card-title topic">Pasjans golf</h5>
                         <p class="card-text">2017 <a href="https://github.com/owik100/Golf-Solitaire" target="blank">Github <i
                                     class="fab fa-github"></i>
                             </a></p>
@@ -259,7 +246,7 @@
                         </div>
                     </div>
                     <div class="card-body text-center">
-                        <h5 class="card-title">Frogger</h5>
+                        <h5 class="card-title topic">Frogger</h5>
                         <p class="card-text">2017 <a href="https://github.com/owik100/Frogger" target="blank">Github <i
                                     class="fab fa-github"></i>
                             </a></p>
@@ -275,7 +262,7 @@
                     </div>
                 </div>
                 <div class="card-body text-center">
-                    <h5 class="card-title">Dhos Adventures</h5>
+                    <h5 class="card-title topic">Dhos Adventures</h5>
                     <p class="card-text">2016 - ? <a href="https://owik.itch.io/Dhos-Adeventures" target="blank">Itch.io <i
                         class="fab fa-itch-io"></i>
                 </a> </p>
@@ -290,7 +277,7 @@
                 <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title w-100 text-center">Mood food</h5>
+                            <h5 class="modal-title w-100 text-center topic">Mood food</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -318,7 +305,7 @@
                 <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title w-100 text-center">Minesweeper</h5>
+                            <h5 class="modal-title w-100 text-center topic">Minesweeper</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -343,7 +330,7 @@
                 <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title w-100 text-center">Chat</h5>
+                            <h5 class="modal-title w-100 text-center topic">Chat</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -367,7 +354,7 @@
                 <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title w-100 text-center">Pasjans golf</h5>
+                            <h5 class="modal-title w-100 text-center topic">Pasjans golf</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -391,7 +378,7 @@
                 <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title w-100 text-center">Frogger</h5>
+                            <h5 class="modal-title w-100 text-center topic">Frogger</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -416,7 +403,7 @@
                 <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title w-100 text-center">Dhos Adventures</h5>
+                            <h5 class="modal-title w-100 text-center topic">Dhos Adventures</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
