Working on responsive images in modal

--- a/index.html
+++ b/index.html
@@ -286,14 +286,25 @@
                             <p class="text-center">Aplikacja służąca do obsługi restauracji. Pozwala użytkownikom na dodawanie produktów do koszyka i składanie zamówień. Administrator ma możliwość zarządzania produktami. </p>
                             <p class="text-center">Użyte języki i technologie: C#, ASP.NET MVC, Entity Framework </p>
                             <p class="text-center"><a  href="https://github.com/owik100/Mood-Food" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
-                                <img  class="bImg mx-auto d-block" id="main1" src="images/Projects/Mood food/Menu.PNG"  >
+                                <img  class=" bImg mx-auto d-block img-fluid" id="main1" src="images/Projects/Mood food/Menu.PNG"  >
                         </div>
                         <div class="modal-footer">
-                                <img class="d-block w-100 sImg" smallID=small1 src="images/Projects/Mood food/Menu.PNG">
-                                <img class="d-block w-100 sImg" smallID=small1 src="images/Projects/Mood food/Koszyk.PNG">
-                                <img class="d-block w-100 sImg" smallID=small1 src="images/Projects/Mood food/Salatka.PNG">
-                                <img class="d-block w-100 sImg" smallID=small1 src="images/Projects/Mood food/Logowanie.PNG">
-                               
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                            <img class="img-fluid sImg" smallID=small1 src="images/Projects/Mood food/Menu.PNG">
+                                    </div>
+                                    <div class="col">
+                                            <img class="img-fluid sImg" smallID=small1 src="images/Projects/Mood food/Koszyk.PNG">
+                                    </div>
+                                    <div class="col">
+                                            <img class="img-fluid  sImg" smallID=small1 src="images/Projects/Mood food/Salatka.PNG">
+                                    </div>
+                                    <div class="col">
+                                            <img class="img-fluid sImg" smallID=small1 src="images/Projects/Mood food/Logowanie.PNG">
+                                    </div>
+                                </div>            
+                            </div>           
                         </div>
                     </div>
                 </div>
@@ -314,16 +325,25 @@
                             <p class="text-center">Gra saper, pozwalająca ustawić ilość min oraz zapisująca wyniki graczy.</p>
                             <p class="text-center">Użyte języki i technologie: C#, WPF, Dapper </p>
                             <p class="text-center"><a  href="https://github.com/owik100/Minesweeper" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
-                                <img  class="bImg mx-auto d-block" id="main2" src="images/Projects/Minesweeper/Game.PNG">
+                                <img  class="bImg mx-auto d-block img-fluid" id="main2" src="images/Projects/Minesweeper/Game.PNG">
                         </div>
                         <div class="modal-footer">
-                                <img class="d-block w-100 sImg" smallID=small2 src="images/Projects/Minesweeper/Game.PNG">
-                                <img class="d-block w-100 sImg" smallID=small2 src="images/Projects/Minesweeper/Options.PNG">
-                                <img class="d-block w-100 sImg" smallID=small2 src="images/Projects/Minesweeper/Best results.PNG">                         
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small2 src="images/Projects/Minesweeper/Game.PNG">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small2 src="images/Projects/Minesweeper/Options.PNG">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small2 src="images/Projects/Minesweeper/Best results.PNG">
+                                    </div>
+                        
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
+                        </div>
 
             <div class="modal fade" id="Project3Modal" tabindex="-1" role="dialog" aria-labelledby="Project3ModalTitle"
                 aria-hidden="true">
@@ -339,7 +359,7 @@
                             <p class="text-center">Aplikacja chatu, pozwalająca na wysyłanie wiadomości. Podstawowa konfiguracja odbywa się za pomocą pliku konfiguracyjnego w formacie JSON.</p>
                             <p class="text-center">Użyte języki i technologie: C#, Win forms</p>
                             <p class="text-center"><a  href="https://github.com/owik100/Chat" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
-                                <img  class="bImg mx-auto d-block" id="main3" src="images/Projects/Chat/Rozmowa.PNG">
+                                <img  class="bImg mx-auto d-block img-fluid" id="main3" src="images/Projects/Chat/Rozmowa.PNG">
                         </div>
                         <div class="modal-footer">
                                 <img class="d-block w-100 sImg" smallID=small3 src="images/Projects/Chat/Rozmowa.PNG">
@@ -363,7 +383,7 @@
                             <p class="text-center">Prosta gra w pasjans.</p>
                             <p class="text-center">Użyte języki i technologie: C#, Win forms</p>
                             <p class="text-center"><a  href="https://github.com/owik100/Golf-Solitaire" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
-                                <img  class="bImg mx-auto d-block" id="main4" src="images/Projects/Golf/Game.png">
+                                <img  class="bImg mx-auto d-block img-fluid" id="main4" src="images/Projects/Golf/Game.png">
                         </div>
                         <div class="modal-footer">
                                 <img class="d-block w-100 sImg" smallID=small4 src="images/Projects/Golf/Game.png">
@@ -387,7 +407,7 @@
                             <p class="text-center">Gra frogger z trzema poziomami.</p>
                             <p class="text-center">Użyte języki i technologie: C++</p>
                             <p class="text-center"><a  href="https://github.com/owik100/Frogger" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
-                                <img  class="bImg mx-auto d-block" id="main5" src="images/Projects/Frogger/Lvl1.png">
+                                <img  class="bImg mx-auto d-block img-fluid" id="main5" src="images/Projects/Frogger/Lvl1.png">
                         </div>
                         <div class="modal-footer">
                                 <img class="d-block w-100 sImg" smallID=small5 src="images/Projects/Frogger/Lvl1.png">
@@ -412,7 +432,7 @@
                             <p class="text-center">Dwuwymiarowa gra platformowa tworzona w środowisku unity. Składa się z ponad 20 poziomów.</p>
                             <p class="text-center">Użyte języki i technologie: C#, Unity</p>
                             <p class="text-center"><a  href="https://owik.itch.io/Dhos-Adeventures" target="blank">Itch.io  <i class="fab fa-itch-io"></i> </a></p> 
-                                <img  class="bImg mx-auto d-block" id="main6" src="images/Projects/Dhos/1.1.jpg">
+                                <img  class="bImg mx-auto d-block img-fluid" id="main6" src="images/Projects/Dhos/1.1.jpg">
                         </div>
                         <div class="modal-footer">
                                 <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/1.1.jpg">
