--- a/index.html
+++ b/index.html
@@ -338,12 +338,13 @@
                                     </div>
                                     <div class="col">
                                         <img class="img-fluid sImg" smallID=small2 src="images/Projects/Minesweeper/Best results.PNG">
-                                    </div>
-                        
+                                    </div>                       
                                 </div>
                             </div>
                         </div>
-                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="modal fade" id="Project3Modal" tabindex="-1" role="dialog" aria-labelledby="Project3ModalTitle"
                 aria-hidden="true">
@@ -362,9 +363,17 @@
                                 <img  class="bImg mx-auto d-block img-fluid" id="main3" src="images/Projects/Chat/Rozmowa.PNG">
                         </div>
                         <div class="modal-footer">
-                                <img class="d-block w-100 sImg" smallID=small3 src="images/Projects/Chat/Rozmowa.PNG">
-                                <img class="d-block w-100 sImg" smallID=small3 src="images/Projects/Chat/Serwer.PNG">                      
-                        </div>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            <img class="img-fluid sImg" smallID=small3 src="images/Projects/Chat/Rozmowa.PNG">
+                                        </div>
+                                        <div class="col">
+                                            <img class="img-fluid sImg" smallID=small3 src="images/Projects/Chat/Serwer.PNG">
+                                        </div>                             
+                                    </div>
+                                </div>                                                             
+                         </div>
                     </div>
                 </div>
             </div>
@@ -386,8 +395,16 @@
                                 <img  class="bImg mx-auto d-block img-fluid" id="main4" src="images/Projects/Golf/Game.png">
                         </div>
                         <div class="modal-footer">
-                                <img class="d-block w-100 sImg" smallID=small4 src="images/Projects/Golf/Game.png">
-                                <img class="d-block w-100 sImg" smallID=small4 src="images/Projects/Golf/Help.png">                      
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small4 src="images/Projects/Golf/Game.png">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small4 src="images/Projects/Golf/Help.png">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -410,9 +427,19 @@
                                 <img  class="bImg mx-auto d-block img-fluid" id="main5" src="images/Projects/Frogger/Lvl1.png">
                         </div>
                         <div class="modal-footer">
-                                <img class="d-block w-100 sImg" smallID=small5 src="images/Projects/Frogger/Lvl1.png">
-                                <img class="d-block w-100 sImg" smallID=small5 src="images/Projects/Frogger/Lvl3.png">    
-                                <img class="d-block w-100 sImg" smallID=small5 src="images/Projects/Frogger/Help.png">                    
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small5 src="images/Projects/Frogger/Lvl1.png">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small5 src="images/Projects/Frogger/Lvl3.png">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small5 src="images/Projects/Frogger/Help.png">
+                                    </div>
+                                </div>
+                            </div>                                                                    
                         </div>
                     </div>
                 </div>
@@ -435,11 +462,25 @@
                                 <img  class="bImg mx-auto d-block img-fluid" id="main6" src="images/Projects/Dhos/1.1.jpg">
                         </div>
                         <div class="modal-footer">
-                                <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/1.1.jpg">
-                                <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/1.3.jpg">    
-                                <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/2.3.jpg">   
-                                <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/4.3.jpg">    
-                                <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/5.2.jpg">                    
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small6 src="images/Projects/Dhos/1.1.jpg">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small6 src="images/Projects/Dhos/1.3.jpg">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small6 src="images/Projects/Dhos/2.3.jpg">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small6 src="images/Projects/Dhos/4.3.jpg">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small6 src="images/Projects/Dhos/5.2.jpg">
+                                    </div>
+                                </div>
+                            </div>                                                                                                                    
                         </div>
                     </div>
                 </div>
