--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
                                             <img class="img-fluid sImg" smallID=small1 src="images/Projects/Mood food/Menu.PNG">
                                     </div>
                                     <div class="col">
-                                            <img class="img-fluid sImg" smallID=small1 src="images/Projects/Mood food/Koszyk2.PNG">
+                                            <img class="img-fluid sImg" smallID=small1 src="images/Projects/Mood food/Koszyk2.png">
                                     </div>
                                     <div class="col">
-                                            <img class="img-fluid  sImg" smallID=small1 src="images/Projects/Mood food/Salatka2.PNG">
+                                            <img class="img-fluid  sImg" smallID=small1 src="images/Projects/Mood food/Salatka2.png">
                                     </div>
                                     <div class="col">
-                                            <img class="img-fluid sImg" smallID=small1 src="images/Projects/Mood food/Logowanie2.PNG">
+                                            <img class="img-fluid sImg" smallID=small1 src="images/Projects/Mood food/Logowanie2.png">
                                     </div>
                                 </div>            
                             </div>           
