Update link do dhos adventures itch.io

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title topic">Mood food</h5>
-                        <p class="card-text">2018 <a href="https://github.com/owik100/Mood-Food" target="blank">Github
+                        <p class="card-text">2019 <a href="https://github.com/owik100/Mood-FoodV2" target="blank">Github
                                 <i class="fab fa-github"></i>
                             </a></p>
                     </div>
@@ -263,7 +263,7 @@
                 </div>
                 <div class="card-body text-center">
                     <h5 class="card-title topic">Dhos Adventures</h5>
-                    <p class="card-text">2016 - ? <a href="https://owik.itch.io/Dhos-Adeventures" target="blank">Itch.io <i
+                    <p class="card-text">2016 - ? <a href="https://owik.itch.io/dhos-adventures" target="blank">Itch.io <i
                         class="fab fa-itch-io"></i>
                 </a> </p>
                 </div>
@@ -283,9 +283,9 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p class="text-center">Aplikacja służąca do obsługi restauracji. Pozwala użytkownikom na dodawanie produktów do koszyka i składanie zamówień. Administrator ma możliwość zarządzania produktami. </p>
-                            <p class="text-center">Użyte języki i technologie: C#, ASP.NET MVC, Entity Framework </p>
-                            <p class="text-center"><a  href="https://github.com/owik100/Mood-Food" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
+                            <p class="text-center">Aplikacja służąca do obsługi restauracji. Pozwala użytkownikom na składanie zamówień. Administrator ma możliwość zarządzania produktami, użytkownikami i zamówieniami. </p>
+                            <p class="text-center">Użyte języki i technologie: C#, ASP.NET Core, Entity Framework Core </p>
+                            <p class="text-center"><a  href="https://github.com/owik100/Mood-FoodV2" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
                                 <img  class=" bImg mx-auto d-block img-fluid" id="main1" src="images/Projects/Mood food/Menu.PNG"  >
                         </div>
                         <div class="modal-footer">
@@ -458,7 +458,7 @@
                         <div class="modal-body">
                             <p class="text-center">Dwuwymiarowa gra platformowa tworzona w środowisku unity. Składa się z ponad 20 poziomów.</p>
                             <p class="text-center">Użyte języki i technologie: C#, Unity</p>
-                            <p class="text-center"><a  href="https://owik.itch.io/Dhos-Adeventures" target="blank">Itch.io  <i class="fab fa-itch-io"></i> </a></p> 
+                            <p class="text-center"><a  href="https://owik.itch.io/dhos-adventures" target="blank">Itch.io  <i class="fab fa-itch-io"></i> </a></p> 
                                 <img  class="bImg mx-auto d-block img-fluid" id="main6" src="images/Projects/Dhos/1.1.jpg">
                         </div>
                         <div class="modal-footer">
