--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-md-8 my-auto">
          
-                    <p class="text-justify">Absolwent studiów informatycznych. Programuje głównie na platformie .NET w języku C#. Programowanie od dawna jest moim hobbym w którym ciągle staram się rozwijać.
+                    <p class="text-justify">Absolwent studiów informatycznych. Programuję głównie na platformie .NET w języku C#. Programowanie od dawna jest moim hobbym w którym ciągle staram się rozwijać.
                          Lubię uczyć się nowych rzeczy, zawsze jestem otwarty na nowe języki i technologie.</p>   
                 </div>
                 <div class="col-md-4">
