Add link to live cook book web

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="d-flex justify-content-center">
-                        <img class="img-fluid"
+                        <img class="img-fluid "
                             src="images/4.jpg">
                     </div>
 
@@ -200,6 +200,8 @@
                 <div class="card-body text-center">
                     <h5 class="card-title topic">Cook Book Client Web</h5>
                     <p class="card-text">2020 <a href="https://github.com/owik100/cook_book_client_web" target="blank">Github
+                            <i class="fab fa-github"></i>
+                        </a> <a href="https://owik100.github.io/cook_book_client_web" target="blank">&nbsp;&nbsp;Live
                             <i class="fab fa-github"></i>
                         </a></p>
                 </div>
@@ -372,7 +374,10 @@
                 <div class="modal-body">
                     <p class="text-center">Webowa aplikacja do obsługi <a href="https://github.com/owik100/Cook-Book-API" target="blank">Cook Book API</a>. Pozwala na tworzenie prywatnych przepisów kulinarnych, publikowania ich, oraz przeglądowanie przepisów innych użytkowników.</p>
                     <p class="text-center">Użyte języki i technologie: React, JSX, CSS</p>
-                    <p class="text-center"><a  href="https://github.com/owik100/cook_book_client_web" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
+                    <p class="text-center"><a  href="https://github.com/owik100/cook_book_client_web" target="blank">Github  <i class="fab fa-github"></i>
+                        <a href="https://owik100.github.io/cook_book_client_web" target="blank">&nbsp;&nbsp;Live
+                            <i class="fab fa-github"></i>
+                        </a> </a></p> 
                         <img  class=" bImg mx-auto d-block img-fluid" id="main8" src="images/Projects/Cook Book Client Web/Przepis.PNG"  >
                 </div>
                 <div class="modal-footer">
