--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col">
                     <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/net.png">
+                        <img class="img-logo" src="images/VB.png">
                     </div>
                 </div>
                 <div class="col">
@@ -118,7 +118,7 @@
                 </div>
                 <div class="col">
                     <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/mssql2.png">
+                        <img class="img-logo" src="images/net.png">
                     </div>
                 </div>
             </div>
