Added linkedin, cleaning

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <!--Icons-->
         <div class="d-flex justify-content-center">
             <ul class="social socialColor">
+                <li><a href="mailto:marcin.owczarz95@gmail.com" target="_blank"><i class="fas fa-envelope icon"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/marcin-o-310466213" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="https://github.com/owik100" target="_blank"><i class="fab fa-github icon"></i></a></li>
-                <li><a href="mailto:marcin.owczarz95@gmail.com" target="_blank"><i class="fas fa-envelope icon"></i></a>
-                </li>
                 <li><a href="https://owik.itch.io/" target="_blank"><i class="fab fa-itch-io icon "></i></a></li>
             </ul>
             <div id="socialArrow" class="socialColor">
@@ -663,7 +663,7 @@
         </div>
         <div class="text-center mb-2 socialColor"><a href="mailto:marcin.owczarz95@gmail.com" target="_blank"><i
                     class="fas fa-envelope icon mr-2 mailFooter"></i>marcin.owczarz95@gmail.com </a> </div>
-        <div class="text-center"> Marcin Owczarz 2019
+        <div class="text-center"> Marcin Owczarz 2019 - 2021
 
         </div>
     </footer>
