Best gifts added

--- a/index.html
+++ b/index.html
@@ -175,6 +175,23 @@
         <div class="container">
             <div class="card-deck">
 
+                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project10"
+                data-target="#Project10Modal">
+                <div class="projectGif">
+                    <img class="card-img-top" src="images/Projects/Best Gifts/Best gifts.gif" alt="Card image cap">
+                    <div class="magnifier">
+                        <i class="fas fa-search-plus fa-3x"></i>
+                    </div>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title topic">Best Gifts</h5>
+                    <p class="card-text">2022 <a href="https://github.com/owik100/best-gifts"
+                        target="blank">Github
+                        <i class="fab fa-github"></i>
+                    </a></p>
+                </div>
+            </div>
+
                 <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project6"
                     data-target="#Project6Modal">
                     <div class="projectGif">
@@ -714,6 +731,50 @@
                                     </div>
                                     <div class="col">
                                         <img class="img-fluid sImg" smallID=small6 src="images/Projects/Dhos/6.1.png">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="Project10Modal" tabindex="-1" role="dialog" aria-labelledby="Project10ModalTitle"
+                aria-hidden="true">
+                <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title w-100 text-center topic">Best Gifts</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p class="text-center">Webowa aplikacja do obsługi <a
+                                href="https://github.com/owik100/BestGiftsAPI" target="blank">Best Gifts API
+                            </a>.
+                            Służy do przeszukiwania inspiracji i pomysłów na prezenty na różne okazje. 
+                            Pozwala na głosowanie na najlepsze pomysły na prezenty, łatwe i szybkie udostępnianie ich oraz
+                            dzielenie się swoimi pomysłami z innymi.</p>
+                            <p class="text-center">Użyte języki i technologie: Angular, Sass, RxJS</p>
+                            <p class="text-center"><a href="https://owik.itch.io/dhos-adventures" target="blank">Itch.io
+                                    <i class="fab fa-itch-io"></i> </a></p>
+                            <img class="bImg mx-auto d-block img-fluid" id="main10" src="images/Projects/Best Gifts/gift add.png">
+                        </div>
+                        <div class="modal-footer">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small10 src="images/Projects/Best Gifts/gift add.png">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small10 src="images/Projects/Best Gifts/gift list search.png">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small10 src="images/Projects/Best Gifts/gifts item.png">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small10 src="images/Projects/Best Gifts/gifts main page.png">
                                     </div>
                                 </div>
                             </div>
