server status gif, l ink fix

--- a/index.html
+++ b/index.html
@@ -757,8 +757,8 @@
                             Pozwala na głosowanie na najlepsze pomysły na prezenty, łatwe i szybkie udostępnianie ich oraz
                             dzielenie się swoimi pomysłami z innymi.</p>
                             <p class="text-center">Użyte języki i technologie: Angular, Sass, RxJS</p>
-                            <p class="text-center"><a href="https://owik.itch.io/dhos-adventures" target="blank">Itch.io
-                                    <i class="fab fa-itch-io"></i> </a></p>
+                            <p class="text-center"><a href="https://github.com/owik100/best-gifts" target="blank">Github <i
+                                class="fab fa-github"></i> </a></p>
                             <img class="bImg mx-auto d-block img-fluid" id="main10" src="images/Projects/Best Gifts/gift add.png">
                         </div>
                         <div class="modal-footer">
@@ -775,6 +775,9 @@
                                     </div>
                                     <div class="col">
                                         <img class="img-fluid sImg" smallID=small10 src="images/Projects/Best Gifts/gifts main page.png">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small10 src="images/Projects/Best Gifts/Best gifts server status.gif">
                                     </div>
                                 </div>
                             </div>
